# poketwo

./: .dockerignore  .env.dev  .gitignore  .gitmodules  =1.4  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  api.py  app.py  bot.py  config.example.py  count.py  data.py  docker-launcher.py  docker_launcher.py  fix.py  flake.nix  highestiv.py  ipc.py  launcher.py  launcher_prod.py  main.py  pyproject.toml  server.py  test.py  unsuspend my account
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image.yml
api/: app.py
cogs/: __init__.py  admin.py  anniversary_2022.py  auctions.py  battle.py  battling.py  bot.py  christmas.py  christmas_2020.py  christmas_2021.py  christmas_2022.py  config.py  data.py  database.py  halloween.py  halloween_2020.py  halloween_2021.py  halloween_2022.py  halloween_2023.py  help.py  invite.py  ipc.py  lang.py  logging.py  market.py  mongo.py  noevent.py  pokedex.py  pokemon.py  pride_2023.py  quests.py  redis.py  sentry.py  shop.py  spawning.py  spring_2023.py  sprites.py  summer_2023.py  trading.py  valentines_2022.py  (+1 more)
cogs/helpers/: checks.py  constants.py  converters.py  dbmodels.py  models.py  mongo.py  pagination.py
data/: data.csv  evolution.csv  items.csv  move_effects.csv  moves.csv  pokemon.csv  pokemon_moves.csv
helpers/: __init__.py  anticheat.py  checks.py  constants.py  context.py  converters.py  data.py  emojis.py  flags.py  models.py  mongo.py  pagination.py  slash.py  utils.py  views.py
lang/en-US/: admin.ftl  auctions.ftl  battling.ftl  cogs.ftl  commands.ftl  config.ftl  errors.ftl  help.ftl  main.ftl  market.ftl  pokemon.ftl  quests.ftl  shop.ftl  spawning.ftl  trading.ftl
lang/fr-FR/: cogs.ftl  commands.ftl  help.ftl  main.ftl
lib/: probability.py
migrations/: 2020-09-06-1_make_global_pokemon.py  2020-09-06-2_remove_local_pokemon.py  2020-09-06-3_update_listings.py  2020-09-06-make_global_pokemon.py  2020-09-06-remove_local_pokemon.py  2020-09-06-update_listings.py  2020-09-09-backfill_moves.py  2020-09-17-create_timestamps.py  2020-10-03-1_make_indices.py  2020-10-03-2_add_indices.py  2020-10-03-add_indices.py  2020-10-04-1_make_indices.py  2020-10-04-2_add_indices.py  2020-10-04-3_add_next_idx.py  2020-10-04-4_add_selected_id.py  2020-10-04-add_selected_id.py  2021-01-11-fill_total_iv.py  2021-12-01-pokemon_listing_format.py  make_global_pokemon.py  numbers_1.py  numbers_2.py  numbers_3.py  remove_local_pokemon.py  shiny.py  update_listings.py
