[tool.poetry]
name = "poketwo"
version = "0.1.0"
description = "A small Pokécord clone"
authors = ["Oliver Ni <oliver.ni@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master", extras = ["speed"] }
umongo = "3.0.0b10"
motor = "^2.2.0"
jishaku = "^2.1.0"
dnspython = "^2.0.0"
suntime = "^1.2.5"
geocoder = "^1.38.1"
humanfriendly = "^8.2"
discord-flags = { git = "https://github.com/oliver-ni/Flag-Parsing.git" }
durations_nlp = "^1.0.1"
aioredis = "^1.3.1"
uvloop = "^0.15.2"
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus.git" }
aioredis-lock = "^0.1.0"
discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views.git" }
expiringdict = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
